--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,7 @@ include 'osmosis-pbf'
 include 'osmosis-pbf2'
 include 'osmosis-pgsimple'
 include 'osmosis-pgsnapshot'
+include 'osmosis-render'
 include 'osmosis-replication'
 include 'osmosis-replication-http'
 include 'osmosis-set'
